--- a/programming/python/59_Ways.org
+++ b/programming/python/59_Ways.org
@@ -179,7 +179,7 @@
 
    =somelist[start:end:stride]=
    
-   #+begin_src python :session example
+   #+begin_src python :session example :exports both
      a = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h']
      evens = a[::2]              # ['a', 'c', 'e', 'g']
      odds = a[1::2]              # ['b', 'd', 'f', 'h']
@@ -739,8 +739,315 @@
    - Avoid using `nonlocal` statements for anything beyond simple functions.
 
 
-** TODO 16. Consider Generators Instead of Returning Lists
-** TODO 17. Be Defensive When Iterating Over Arguments
+** DONE 16. Consider Generators Instead of Returning Lists
+   CLOSED: [2019-06-20 Thu 22:24]
+   - State "DONE"       from "IN-PROGRESS" [2019-06-20 Thu 22:24]
+   :LOGBOOK:
+   CLOCK: [2019-06-20 Thu 21:58]--[2019-06-20 Thu 22:24] =>  0:26
+   :END:
+   
+   Dense and noisy appending to a list. The list must be filled before returning it. For large inputs, there could be memory issues.
+
+   #+begin_src python :session :results output :exports both
+     def index_words(text):
+         result = []
+         if text:
+             result.append(0)
+         for index, letter in enumerate(text):
+             if letter == ' ':
+                 result.append(index + 1)
+         return result
+
+
+     result = index_words('Four score and seven years ago...')
+     print(result[:3])
+   #+end_src
+
+   #+RESULTS:
+   : [0, 5, 11]
+   : 
+   : 
+
+   Using a generator we cut down some code and make it a little easier to read.
+
+   #+begin_src python :session :results output :exports both
+     def index_words_iter(text):
+         if text:
+             yield 0
+         for index, letter in enumerate(text):
+             if letter == ' ':
+                 yield index + 1
+
+     result = index_words('Four score and seven years ago...')
+     print(result[:3])
+   #+end_src
+
+   #+RESULTS:
+   : [0, 5, 11]
+   : 
+   : 
+
+   
+   Handle large inputs more efficiently.
+
+   #+begin_src python :session :results output :exports both
+     # The working memory of this function is the size of the list coming in.
+     # It doesn't create a new list, avoiding adding more memory to the function.
+     def index_file(handle):
+         offset = 0
+         for line in handle:
+             if line:
+                 yield offset
+             for letter in line:
+                 offset += 1
+                 if letter == ' ':
+                     yield offset
+
+
+     it = index_file([
+         'Four score and seven years ago...',
+         'Four score and seven years ago...',
+         'Four score and seven years ago...'
+     ])
+
+     print(it)
+     print(list(it))
+   #+end_src
+
+   #+RESULTS:
+   : <generator object index_file at 0x10fed5b48>
+   : [0, 5, 11, 15, 21, 27, 33, 38, 44, 48, 54, 60, 66, 71, 77, 81, 87, 93]
+   : 
+   : 
+
+   *Takeaways*
+
+   - Using generators can be clearer than the alternative of returning lists of accumulated results.
+   - The interator returned by a generator produces the set of values passed to =yield= expressions within the generator function's body.
+   - Generators can produce a sequence of outputs for arbitrarily large inputs because their working memory doesn't include all inputs and outputs.
+
+  
+** DONE 17. Be Defensive When Iterating Over Arguments
+   CLOSED: [2019-06-21 Fri 11:23]
+   - State "DONE"       from "IN-PROGRESS" [2019-06-21 Fri 11:23]
+   :LOGBOOK:
+   CLOCK: [2019-06-21 Fri 10:48]--[2019-06-21 Fri 11:22] =>  0:34
+   CLOCK: [2019-06-21 Fri 10:09]--[2019-06-21 Fri 10:40] =>  0:31
+   :END:
+
+   This works good for small inputs
+
+   #+begin_src python :session :results output :exports both
+     def normalize(numbers):
+         total = sum(numbers)
+         result = []
+         for value in numbers:
+             percent = 100 * value / total
+             result.append(percent)
+         return result
+
+
+     visits = [15, 35, 80]
+     percentages = normalize(visits)
+     print(percentages)
+   #+end_src
+
+   #+RESULTS:
+   : [11.538461538461538, 26.923076923076923, 61.53846153846154]
+   : 
+   : 
+
+   To scale it up, use a generator
+  
+   #+begin_src python :session :results output :exports both
+     def normalize(numbers):
+         print(numbers)                      # Generator
+         total = sum(numbers)
+         print(total)
+         print(sum(numbers))                 # Depleted so it's 0
+         result = []
+         for value in numbers:               # Depleted so numbers = []
+             percent = 100 * value / total
+             result.append(percent)
+         return result
+
+
+     def read_visits(multi_numbers):
+         for row in multi_numbers:
+             yield int(row)
+
+
+     iter = read_visits([15, 35, 80])
+     percentages = normalize(iter)
+     print(percentages)                      # Empty because the iterator has been consumed
+
+
+     # Let's try again
+     iter2 = read_visits([15, 35, 80])
+     print(list(iter2))                      # consuming the iterator
+     print(list(iter2))                      # empty because it's consumed
+   #+end_src
+
+   #+RESULTS:
+   : <generator object read_visits at 0x10ff1b5c8>
+   : 130
+   : 0
+   : []
+   : [15, 35, 80]
+   : []
+   : 
+   : 
+
+   There's no way of telling whether a iterator has been exhausted, so let's defensively copy the list
+
+   #+begin_src python :session :results output :exports both
+     def normalize_copy(numbers):
+         numbers_list = list(numbers)       # Copy the iterator
+         total = sum(numbers_list)
+         result = []
+         for value in numbers_list:
+             percent = 100 * value / total
+             result.append(percent)
+         return result
+
+     def read_visits(multi_numbers):
+         for row in multi_numbers:
+             yield int(row)
+
+     iter = read_visits([15, 35, 80])
+     percentages = normalize_copy(iter)
+     print(percentages)                     # Works as expected
+   #+end_src
+
+   #+RESULTS:
+   : [11.538461538461538, 26.923076923076923, 61.53846153846154]
+   : 
+   : 
+
+   But what if the =numbers= argument is large? We can pass a function in that gets the iterator each time we need it.
+
+   #+begin_src python :session :results output :exports both
+     def normalize_func(get_iter_func):
+         total = sum(get_iter_func())
+         result = []
+         for value in get_iter_func():
+             percent = 100 * value / total
+             result.append(percent)
+         return result
+
+     def read_visits(multi_numbers):
+         for row in multi_numbers:
+             yield int(row)
+
+     iter = read_visits([15, 35, 80])
+     percentages = normalize_func(lambda: read_visits([15, 35, 80]))
+     print(percentages)                     # Works as expected
+   #+end_src
+
+   #+RESULTS:
+   : [11.538461538461538, 26.923076923076923, 61.53846153846154]
+   : 
+   : 
+
+
+   This works, but it's pretty clumsy, how about using a class instead that implements the =__iter__= method.
+   
+   #+begin_src python :session :results output :exports both
+     class ReadVisits(object):
+         def __init__(self, data_path):
+             self.data_path = data_path
+
+         def __iter__(self):
+             for row in self.data_path:
+                 yield int(row)
+
+     def normalize(numbers_iter_object):
+         total = sum(numbers_iter_object)   # Calls ReadVisits.__iter__
+         result = []
+         for value in numbers_iter_object:  # Calls ReadVisits.__iter__
+             percent = 100 * value / total
+             result.append(percent)
+         return result
+
+     visits = ReadVisits([15, 35, 80])
+     percentages = normalize(visits)
+     print(percentages)                     # Works as expected
+   #+end_src
+
+   #+RESULTS:
+   : [11.538461538461538, 26.923076923076923, 61.53846153846154]
+   : 
+   : 
+
+   Cleaner, but let's be defensive.
+   
+   #+begin_src python :session :results output
+     class ReadVisits(object):
+         def __init__(self, data_path):
+             self.data_path = data_path
+
+         def __iter__(self):
+             for row in self.data_path:
+                 yield int(row)
+
+     def normalize(numbers_iter_object):
+
+         print(numbers_iter_object)
+         print(iter(numbers_iter_object))
+
+         if iter(numbers_iter_object) is iter(numbers_iter_object):
+             raise TypeError('numbers_iter_object must not be an iter')
+
+         total = sum(numbers_iter_object)   # Calls ReadVisits.__iter__
+         result = []
+         for value in numbers_iter_object:  # Calls ReadVisits.__iter__
+             percent = 100 * value / total
+             result.append(percent)
+         return result
+
+
+     visits = [15, 35, 80]
+     percentages = normalize(visits)
+     print(percentages)                     # Works as expected
+
+     visits = ReadVisits([15, 35, 80])
+     percentages = normalize(visits)
+     print(percentages)                     # Works as expected
+
+     it = iter([15, 35, 80])
+     percentages = normalize(it)            # Throws a TypeError
+     print(percentages)                     
+   #+end_src
+
+   #+RESULTS:
+   #+begin_example
+   /var/folders/bz/tc86r39x3yb0dm00h93xbbn40000gn/T/babel-9RVJJt/python-6E95Id in <module>
+        24 
+        25 visits = [15, 35, 80]
+   ---> 26 percentages = normalize(visits)
+        27 print(percentages)                     # Works as expected
+        28 
+
+   /var/folders/bz/tc86r39x3yb0dm00h93xbbn40000gn/T/babel-9RVJJt/python-6E95Id in normalize(numbers_iter_object)
+        10 
+        11     print(numbers_iter_object)
+   ---> 12     print(iter(numbers_iter_object))
+        13 
+        14     if iter(numbers_iter_object) is iter(numbers_iter_object):
+
+   TypeError: 'generator' object is not callable
+
+
+   #+end_example
+
+   *Takeaways*
+
+   - Beware of functions that iterate over input arguments multiple times. If they are iterators, you may see strange behavior and missing values.
+   - Python's iterator protocol defines how containers and iterators iteract with the =iter= and =next= built-in functions, =for= loops, and related expressions.
+   - You can define your own iterable container by implementing the =__iter__= method as a generator.
+   - You can check if a value is an iterator if calling =iter= on it twice produces the same result, which can then be progressed with the =next= built-in function.
+
+     
 ** TODO 18. Reduce Visual Noise with Variable Positional Arguments
 ** TODO 19. Provide Optional Behavior with Keyword Arguments
 ** TODO 20. Use None and Docstrings to Specify Dynamic Default Arguments
@@ -761,10 +1068,10 @@
 * Time
 
 #+BEGIN: clocktable :scope file :maxlevel 2
-#+CAPTION: Clock summary at [2019-06-05 Wed 22:18]
+#+CAPTION: Clock summary at [2019-06-20 Thu 22:24]
 | Headline                                     |   Time |      |
 |----------------------------------------------+--------+------|
-| *Total time*                                 | *1:45* |      |
+| *Total time*                                 | *2:35* |      |
 |----------------------------------------------+--------+------|
 | Pythonic Thinking                            |   1:27 |      |
 | \_  8. Avoid More Than Two Expressions in... |        | 0:07 |
@@ -773,6 +1080,8 @@
 | \_  11. Use =zip= to Process Iterators in... |        | 0:14 |
 | \_  12. Avoid =else= Blocks After =for=...   |        | 0:10 |
 | \_  13. Take Advantage of Each Block in...   |        | 0:20 |
-| Functions                                    |   0:18 |      |
+| Functions                                    |   1:08 |      |
 | \_  14. Prefer Exceptions to Returning...    |        | 0:18 |
+| \_  15. Know How Closures Interact with...   |        | 0:24 |
+| \_  16. Consider Generators Instead of...    |        | 0:26 |
 #+END:
