--- a/programming/python/59_Ways.org
+++ b/programming/python/59_Ways.org
@@ -991,10 +991,6 @@
                  yield int(row)
 
      def normalize(numbers_iter_object):
-
-         print(numbers_iter_object)
-         print(iter(numbers_iter_object))
-
          if iter(numbers_iter_object) is iter(numbers_iter_object):
              raise TypeError('numbers_iter_object must not be an iter')
 
@@ -1068,10 +1064,10 @@
 * Time
 
 #+BEGIN: clocktable :scope file :maxlevel 2
-#+CAPTION: Clock summary at [2019-06-20 Thu 22:24]
+#+CAPTION: Clock summary at [2019-06-21 Fri 11:25]
 | Headline                                     |   Time |      |
 |----------------------------------------------+--------+------|
-| *Total time*                                 | *2:35* |      |
+| *Total time*                                 | *3:40* |      |
 |----------------------------------------------+--------+------|
 | Pythonic Thinking                            |   1:27 |      |
 | \_  8. Avoid More Than Two Expressions in... |        | 0:07 |
@@ -1080,8 +1076,9 @@
 | \_  11. Use =zip= to Process Iterators in... |        | 0:14 |
 | \_  12. Avoid =else= Blocks After =for=...   |        | 0:10 |
 | \_  13. Take Advantage of Each Block in...   |        | 0:20 |
-| Functions                                    |   1:08 |      |
+| Functions                                    |   2:13 |      |
 | \_  14. Prefer Exceptions to Returning...    |        | 0:18 |
 | \_  15. Know How Closures Interact with...   |        | 0:24 |
 | \_  16. Consider Generators Instead of...    |        | 0:26 |
+| \_  17. Be Defensive When Iterating Over...  |        | 1:05 |
 #+END:
