Better formatting for each README and 59_Ways

--- a/programming/elixir/README.org
+++ b/programming/elixir/README.org
@@ -2,14 +2,14 @@
 #+STARTUP: logdone
 #+TODO: TODO IN-PROGRESS | DONE(!)
 
-* TODO Environment Setup
+** TODO Environment Setup
  
-  - https://elixir-lang.org/install.html
-  - https://zohaib.me/spacemacs-and-alchemist-to-make-elixir-of-immortality/
+   - https://elixir-lang.org/install.html
+   - https://zohaib.me/spacemacs-and-alchemist-to-make-elixir-of-immortality/
 
  
-* TODO Reference Materials
+** TODO Reference Materials
   
-** TODO The Joy Of Elixir
+*** TODO The Joy Of Elixir
    
-   https://joyofelixir.com/toc.html
+    https://joyofelixir.com/toc.html
