--- a/programming/javascript/README.org
+++ b/programming/javascript/README.org
@@ -2,14 +2,14 @@
 #+STARTUP: logdone
 #+TODO: TODO IN-PROGRESS | DONE(!)
 
-* TODO Environment Setup
+** TODO Environment Setup
   
-* TODO Reference Materials
+** TODO Reference Materials
   
-** TODO [[file:programming/javascript/The_Good_Parts.org][JavaScript: The Good Parts]]
+*** TODO [[file:programming/javascript/The_Good_Parts.org][JavaScript: The Good Parts]]
 
-** TODO Thinking In Ramda
+*** TODO Thinking In Ramda
    
-   http://randycoulman.com/blog/categories/thinking-in-ramda/
+    http://randycoulman.com/blog/categories/thinking-in-ramda/
 
 
