--- a/programming/python/59_Ways.org
+++ b/programming/python/59_Ways.org
@@ -1329,9 +1329,150 @@
     - Use =None= as the default value for keyword args that have a dynamic value. *Document the actual default behavior in the function's docstring.
    
 
-*** TODO 21. Enforce Clarity with Keyword-Only Arguments
+*** DONE 21. Enforce Clarity with Keyword-Only Arguments
+    CLOSED: [2019-06-28 Fri 14:40]
+    - State "DONE"       from "IN-PROGRESS" [2019-06-28 Fri 14:40]
+    :LOGBOOK:
+    CLOCK: [2019-06-28 Fri 14:16]--[2019-06-28 Fri 14:40] =>  0:24
+    :END:
+
+    Example: Safe dividing
+
+    #+begin_src python :session :results output :exports both
+      def safe_division(number, divisor, ignore_overflow, ignore_zero_division):
+          try:
+              return number / divisor
+          except OverflowError:
+              if ignore_overflow:
+                  return 0
+              raise
+          except ZeroDivisionError:
+              if ignore_zero_division:
+                  return float('inf')
+              raise
+
+
+      result = safe_division(1, 10**500, True, False)
+      print(result)
+      result = safe_division(1, 0, False, True)
+      print(result)
+    #+end_src
+
+    #+RESULTS:
+    : 0.0
+    : inf
+    : 
+    : 
+
+    The function works as expected, but is prone to errors because it is left up to the caller to remember the positions of the ignore parameters. 
+    The caller could get very different results as a result of passing the incorrect arguments.
+   
+    A slightly better way of doing this is providing default values.
+
+    #+begin_src python :session :results output :exports both
+      def safe_division_b(number, divisor, ignore_overflow=False, ignore_zero_division=False):
+          try:
+              return number / divisor
+          except OverflowError:
+              if ignore_overflow:
+                  return 0
+              raise
+          except ZeroDivisionError:
+              if ignore_zero_division:
+                  return float('inf')
+              raise
+
+
+      result = safe_division_b(1, 10**500, ignore_overflow=True)
+      print(result)
+      result = safe_division_b(1, 0, ignore_zero_division=True)
+      print(result)
+    #+end_src
+
+    #+RESULTS:
+    : 0.0
+    : inf
+    : 
+    : 
+
+    The issue here is, since these are optional, there's nothing forcing the callers to use keyword args for clarity.
+
+    You can still call it by using positional args =result = safe_division(1, 0, False, True)=
+
+    Demand clarity by requiring callers to be clear about their intentions.
+    
+    #+begin_src python :session :results output :exports both
+      def safe_division_c(number, divisor, *, ignore_overflow=False, ignore_zero_division=False):
+          try:
+              return number / divisor
+          except OverflowError:
+              if ignore_overflow:
+                  return 0
+              raise
+          except ZeroDivisionError:
+              if ignore_zero_division:
+                  return float('inf')
+              raise
+
+
+      result = safe_division_c(1, 10**500, ignore_overflow=True)
+      print(result)
+      result = safe_division_c(1, 0, ignore_zero_division=True)
+      print(result)
+      result = safe_division_c(1, 0, False, True)              # Error!
+    #+end_src
+
+    #+RESULTS:
+    : /var/folders/bz/tc86r39x3yb0dm00h93xbbn40000gn/T/babel-VKajQJ/python-Op0jHw in <module>
+    :      16 result = safe_division_c(1, 0, ignore_zero_division=True)
+    :      17 print(result)
+    : ---> 18 result = safe_division_c(1, 0, False, True)              # Error!
+    : 
+    : TypeError: safe_division_c() takes 2 positional arguments but 4 were given
+    : 
+    : 
+
+    
+    What does =*args= and =*kwargs= do?
+
+    #+begin_src python :session :results output :exports both
+      def meaningless(*args, **kwargs):
+          for arg in args:
+              print('Positional Arg: ', arg)
+
+          for kwarg in kwargs:
+              print('Keyword Arg: ', kwarg, '=', kwargs[kwarg])
+
+
+      meaningless(1, 2, 'hello', world=True, name='Wallice')
+    #+end_src
+
+    #+RESULTS:
+    : Positional Arg:  1
+    : Positional Arg:  2
+    : Positional Arg:  hello
+    : Keyword Arg:  world = True
+    : Keyword Arg:  name = Wallice
+    : 
+    : 
+
+    *Takeaways*
+
+    - Keyword args make the intention of a call more clear.
+    - Use keyword-only args to force callers to supply keyword arguments for potentially confusing functions, especially Boolean flags.
+    - Python 3 Supports explicit syntax for keyword-only arguments for functions.
+    - Python 2 can emulate keyword-only arguments by using =**kwargs= and manually raising =TypeError= exceptions.
+
 
 ** Classes and Inheritance
+
+*** TODO 22. Prefer Helper Classes Over Bookkeeping with Dictionaries and Tuples
+*** TODO 23. Accept Functions for Simple Interfaces Instead of Classes
+*** TODO 24. User =@classmethod= Polymorphism to Construct Objects Generically
+*** TODO 25. Initialize Parent Classes with =super=
+*** TODO 26. Use Multiple Inheritance Only for Mix-in Utility Classes
+*** TODO 27. Prefer Public Attributes Over Private Ones
+*** TODO 28. Inherit from =collections.abc= for Custom Container Types
 
 ** Metaclasses and Attributes
 
@@ -1346,10 +1487,10 @@
 ** Time
 
  #+BEGIN: clocktable :scope file :maxlevel 3
- #+CAPTION: Clock summary at [2019-06-27 Thu 17:31]
+ #+CAPTION: Clock summary at [2019-06-28 Fri 14:44]
  | Headline                                       | Time   |      |      |
  |------------------------------------------------+--------+------+------|
- | *Total time*                                   | *5:04* |      |      |
+ | *Total time*                                   | *5:28* |      |      |
  |------------------------------------------------+--------+------+------|
  | \_  Pythonic Thinking                          |        | 1:27 |      |
  | \_    8. Avoid More Than Two Expressions in... |        |      | 0:07 |
@@ -1358,7 +1499,7 @@
  | \_    11. Use =zip= to Process Iterators in... |        |      | 0:14 |
  | \_    12. Avoid =else= Blocks After =for=...   |        |      | 0:10 |
  | \_    13. Take Advantage of Each Block in...   |        |      | 0:20 |
- | \_  Functions                                  |        | 3:37 |      |
+ | \_  Functions                                  |        | 4:01 |      |
  | \_    14. Prefer Exceptions to Returning...    |        |      | 0:18 |
  | \_    15. Know How Closures Interact with...   |        |      | 0:24 |
  | \_    16. Consider Generators Instead of...    |        |      | 0:26 |
@@ -1366,4 +1507,5 @@
  | \_    18. Reduce Visual Noise with Variable... |        |      | 0:28 |
  | \_    19. Provide Optional Behavior with...    |        |      | 0:19 |
  | \_    20. Use None and Docstrings to...        |        |      | 0:37 |
+ | \_    21. Enforce Clarity with Keyword-Only... |        |      | 0:24 |
  #+END:
